--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 asttokens==2.0.5
 backcall==0.2.0
+beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 colorama==0.4.4
@@ -8,9 +9,11 @@ coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.1.1
 Django==3.2.7
+django-appconf==1.0.5
 django-dump-load-utf8==0.0.4
 django-environ==0.8.1
 django-extensions==3.1.5
+django-imagekit==4.1.0
 django-seed==0.3.1
 djangorestframework==3.13.1
 drf-yasg==1.20.0
@@ -26,7 +29,10 @@ MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 packaging==21.3
 parso==0.8.3
+pi==0.1.2
 pickleshare==0.7.5
+pilkit==2.0
+Pillow==9.1.0
 prompt-toolkit==3.0.29
 pure-eval==0.2.2
 Pygments==2.11.2
@@ -37,6 +43,7 @@ requests==2.27.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 stack-data==0.2.0
 toposort==1.7
